<?xml version="1.0"?>
<package format="3">

    <!-- Package Information -->
    <name>mins</name>
    <version>1.0.0</version>
    <description>
        MINS: Efficient and Robust Multisensor-aided Inertial Navigation System
    </description>

    <!-- Code Author -->
    <author email="woosik@udel.edu">Woosik Lee</author>
    <maintainer email="woosik@udel.edu">Woosik Lee</maintainer>

    <!-- Licensing -->
    <license>GNU General Public License v3.0</license>

    <!--  Dependencies needed to compile this package. -->
    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
    <depend>cmake_modules</depend>
    <depend condition="$ROS_VERSION == 1">roscpp</depend>
    <depend condition="$ROS_VERSION == 1">rosbag</depend>

    <depend condition="$ROS_VERSION == 2">rclcpp</depend>

    <depend>tf</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>image_geometry</depend>
    <depend>visualization_msgs</depend>
    <depend>image_transport</depend>
    <depend>cv_bridge</depend>
    <depend>ov_core</depend>

    <!-- Note the export is required to expose the executables -->
    <export>
        <build_type condition="$ROS_VERSION == 1">catkin</build_type>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    </export>

</package>
