<?xml version="1.0"?>
<package format="3">

    <!-- Package Information -->
    <name>mins_data</name>
    <version>1.0.0</version>
    <description>
        Data for the MINS simulation trajectory generation and ground truth for different setups.
    </description>

    <!-- Code Authors -->
    <author email="woosik@udel.edu">Woosik Lee</author>
    <maintainer email="woosik@udel.edu">Woosik Lee</maintainer>

    <!-- Licensing -->
    <license>GNU General Public License v3.0</license>

    <!-- ROS1: Dependencies needed to compile this package. -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Note the export is required to expose the executables -->
    <export>
        <build_type>catkin</build_type>
    </export>

</package>
