<?xml version="1.0"?>
<package format="3">

    <!-- Package Information -->
    <name>mins_eval</name>
    <version>1.0.0</version>
    <description>
        Evaluation toolkit and scripts for MINS.
    </description>

    <!-- Code Authors -->
    <author email="woosik@udel.edu">Woosik Lee</author>
    <maintainer email="woosik@udel.edu">Woosik Lee</maintainer>

    <!-- Licensing -->
    <license>GNU General Public License v3.0</license>

    <!-- ROS1: Dependencies needed to compile this package. -->
    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
    <depend>cmake_modules</depend>
    <depend condition="$ROS_VERSION == 1">roscpp</depend>
    <depend condition="$ROS_VERSION == 1">rospy</depend>
    <depend condition="$ROS_VERSION == 2">rclpy</depend>
    <depend condition="$ROS_VERSION == 2">rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>ov_core</depend>
    <depend>ov_eval</depend>

    <!-- Note the export is required to expose the executables -->
    <export>
        <build_type condition="$ROS_VERSION == 1">catkin</build_type>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    </export>

</package>